--- a/angular.json
+++ b/angular.json
@@ -27,12 +27,13 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ "src/styles.scss",
-             "node_modules/primeng/resources/themes/saga-blue/theme.css",
+            "styles": [
+              "src/styles.scss",
+              "node_modules/primeng/resources/themes/saga-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-               "node_modules/primeicons/primeicons.css",
-                "node_modules/primeflex/primeflex.css"
-               ],
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeflex/primeflex.css"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -126,6 +127,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "Jogo-de-loteria-Java-Angular"
+    }
+  },
+  "defaultProject": "Jogo-de-loteria-Java-Angular",
+  "cli": {
+    "analytics": false
+  }
 }
